NAVAPP-291 Fix long site names outfit
It applies text-overflow: ellipsis to truncate the long site names and keep the available area formatted properly and adds some spacing from the right browser edge. A Title attribute has been added to show the tooltip to let users read longer site names which were truncated.

#resolve #assign ntrajkovski

--- a/navigation-application/projects/navapp/src/app/top-panel/components/top-panel.component.scss
+++ b/navigation-application/projects/navapp/src/app/top-panel/components/top-panel.component.scss
@@ -46,3 +46,10 @@
   top: 0;
   z-index: 1;
 }
+
+.selected-site-name {
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
